--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,19 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Social Authentication
+
+# Google OAuth credentials (get from Google Cloud Console)
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URL=
+
+# GitHub OAuth credentials (get from GitHub Developer Settings)
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_REDIRECT_URL=
+
+# Stripe for payments
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
